[tool.poetry]
name = "ekata"
version = "0.1.0"
description = ""
authors = ["prasanta <prasantakakati1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
autobahn = "=0.16.0"
Mako = "=1.0.6"
"backports.ssl-match-hostname" = "=3.5.0.1"
django-reset-migrations = "=0.2.0"
ipython-genutils = "=0.1.0"
django-ckeditor = "=5.1.1"
phonenumberslite = "=7.4.4"
django-tinymce = "=2.4.0"
asgi-redis = "=0.14.1"
oauthlib = "=2.0.0"
wrapt = "=1.10.8"
psycopg2 = "=2.6.2"
celery = "=3.1.23"
isort = "=4.2.5"
raven = "=6.0.0"
django-countries = "=4.0"
"backports.shutil-get-terminal-size" = "=1.0.0"
iowait = "=0.2"
Django = "=1.9.7"
MarkupSafe = "=0.23"
billiard = "=3.3.0.23"
httplib2 = "=0.9.2"
twilio = "=5.6.0"
bleach = "=1.4.3"
Pillow = "=3.3.1"
decorator = "=4.0.10"
django-user-accounts = "=2.0.0"
contextlib2 = "=0.5.5"
chaussette = "=1.3.0"
psutil = "=5.0.1"
Pygments = "=2.1.3"
greenlet = "=0.4.10"
tomako = "=0.1.0.post1"
django-dbbackup = "=3.1.3"
django-appconf = "=1.0.2"
django-recaptcha2 = "=1.0.0"
gevent = "=1.1.2"
django-grappelli = "=2.8.2"
html5lib = "=0.9999999"
sendgrid-django = "=2.0.0"
flower = "=0.9.1"
rjsmin = "=1.0.12"
redis = "=2.10.5"
ptyprocess = "=0.5.1"
django-markdownx = "=1.6.3"
django-markdown-deux = "=1.0.5"
django-versatileimagefield = "=1.5"
asgiref = "=0.14.0"
django-guardian = "=1.4.5"
rcssmin = "=1.0.6"
django-flat-responsive = "=1.0.0"
PyJWT = "=1.4.0"
smtpapi = "=0.3.1"
django-filebrowser = "=3.7.2"
ipython = "=5.1.0"
msgpack-python = "=0.4.8"
pickleshare = "=0.7.4"
pygeoip = "=0.3.2"
wcwidth = "=0.1.7"
django-el-pagination = "=3.0.1"
traitlets = "=4.3.1"
django-object-actions = "=0.8.2"
requests = "=2.10.0"
anyjson = "=0.3.3"
django-forms-bootstrap = "=3.0.1"
lazy-object-proxy = "=1.2.2"
channels = "=0.17.3"
daphne = "=0.15.0"
prompt-toolkit = "=1.0.8"
beautifulsoup4 = "=4.5.1"
django-markdown = "=0.8.4"
pexpect = "=4.2.1"
TornadIO2 = "=0.0.3"
django-websocket-redis = "=0.4.6"
certifi = "=2016.2.28"
pyzmq = "=16.0.2"
simplejson = "=3.10.0"
pytz = "=2015.7"
python-openid = "=2.2.5"
Markdown = "=2.6.6"
geoip2 = "=2.4.0"
django-easy-timezones = "=0.7.0"
tweepy = "=3.5.0"
jsonfield = "=1.0.3"
iso3166 = "=0.7"
piexif = "=1.0.8"
Babel = "=2.3.4"
circus = "=0.14.0"
"backports.functools-lru-cache" = "=1.2.1"
django-simple-history = "=1.8.1"
pathlib2 = "=2.1.0"
configparser = "=3.5.0"
amqp = "=1.4.9"
sendgrid = "=2.2.1"
six = "=1.10.0"
Twisted = "=16.4.1"
django-phonenumber-field = "=1.1.0"
python-http-client = "=1.2.3"
requests-oauthlib = "=0.7.0"
django-bootstrap-pagination = "=1.6.1"
"zope.interface" = "=4.3.2"
kombu = "=3.0.35"
django-allauth = "=0.25.2"
txaio = "=2.5.1"
tornado = "=4.2"
stripe = "=1.46.0"
coverage = "=4.0.2"
django-redis-cache = "=1.6.5"
markdown2 = "=2.3.1"
ipaddress = "=1.0.14"
astroid = "=1.4.8"
maxminddb = "=1.2.1"
enum34 = "=1.1.6"
simplegeneric = "=0.8.1"
futures = "=3.0.5"
mccabe = "=0.5.2"
circus-web = "=1.0.0"
django-compressor = "=2.1"
unicodecsv = "=0.14.1"
python-bitcoinrpc = "=1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
